[tool.poetry]
name = "digitalocean-wrapper"
version = "0.1.0"
description = ""
authors = ["l02 <l8556@outlook.com>"]
readme = "README.md"
classifiers=[
    'Operating System :: OS Independent',
    "Programming Language :: Python :: 3 :: Only",
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: Implementation :: PyPy',
    'Programming Language :: Python :: Implementation :: CPython',
]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
python-digitalocean = "^1.17.0"
rich = "*"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
